fixed poster hover z-index issue

--- a/src/app/login/login.component.scss
+++ b/src/app/login/login.component.scss
@@ -1,5 +1,5 @@
 .form-container {
-  margin: 1em auto 0 auto;
+  margin: 7em auto 0 auto;
   max-width: 20rem;
   width: 90%;
   color: white;
